--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=ScoutingStats
+author=OmbudRov,OlmletHunter
 support=
-description=An example greeter plugin
+description=Super Duper Omega COX Scout Counter
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.ScoutingStats.ScoutingStatsPlugin
