--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=OmbudRov,OlmletHunter
 support=
 description=Super Duper Omega COX Scout Counter
 tags=
-plugins=com.ScoutingStats.ScoutingStatsPlugin
+plugins=com.scoutingstats.ScoutingStatsPlugin
