Added some tages

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=ScoutingStats
 author=OmbudRov,OlmletHunter
 support=
 description=Super Duper Omega COX Scout Counter
-tags=
+tags=COX, Raids
 plugins=com.scoutingstats.ScoutingStatsPlugin
